--- a/index..html
+++ b/index..html
@@ -12,6 +12,7 @@
     <h2>Its not your mama, its your amma</h2>
     <h3>Ok I agree with you </h3>
     <p>Lets go for a party</p>
-    
+
+       <img src="Flag.jpg" alt="">  
 </body>
 </html>
