--- a/index..html
+++ b/index..html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my first github project</h1>
+    <h1>This is my recent github project</h1>
     <h2>look mama,I am using github</h2>
     <h2>Its not your mama, its your amma</h2>
     <h3>Ok I agree with you </h3>
