--- a/index..html
+++ b/index..html
@@ -13,6 +13,7 @@
     <h3>Ok I agree with you </h3>
     <p>Lets go for a party</p>
 
-       <img src="Flag.jpg" alt="">  
+       <img src="Flag.jpg" alt="">
+       <img src="shahidminer.jpg" alt="">  
 </body>
 </html>
